@@ -61,6 +61,7 @@
         <li><a href="xmlrpc.py">xmlrpc.py</a></li>
         <li><a href="xmlrpcclient.py">xmlrpcclient.py</a></li>
         <li><a href="advogato.py">advogato.py</a></li>
+        <li><a href="google.py">google.py</a></li>
         <li><a href="hello.rpy.py">hello.rpy.py</a></li>
         <li><a href="vhost.rpy.py">vhost.rpy.py</a></li>
         <li><a href="report.rpy.py">report.rpy.py</a></li>
